--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             >Contact us</a
           >
         </li>
-        <li><a href="#" id="login">Log in</a></li>
+        <li><a href="#" id="g_id_signin">Log in</a></li>
         <!-- <li><a href="#" id="signup">Sign up</a></li> -->
         <li>
           <a class="show-modal" id="lang">
@@ -248,5 +248,6 @@
     <script>
       lucide.createIcons();
     </script>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
   </body>
 </html>
