--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             >Contact us</a
           >
         </li>
-        <li><a href="#" id="login">Log in</a></li>
+        <li><a href="login-page.html" id="login">Log in</a></li>
         <!-- <li><a href="#" id="signup">Sign up</a></li> -->
         <li>
           <a class="show-modal" id="lang">
