--- a/login-page.html
+++ b/login-page.html
@@ -31,67 +31,6 @@
     </div>
 
     <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <script>
-      const authForm = document.getElementById('authForm');
-      const submitBtn = document.getElementById('submitBtn');
-      const formTitle = document.getElementById('formTitle');
-      const toggleLink = document.getElementById('toggleLink');
-      const toggleText = document.getElementById('toggleText');
-      const errorMsg = document.getElementById('errorMsg');
-      let isLogin = true;
-
-      // Load users from localStorage (for demo purposes)
-      let users = JSON.parse(localStorage.getItem('users')) || [];
-
-      // Toggle between login and sign-up
-      toggleLink.addEventListener('click', e => {
-        e.preventDefault();
-        isLogin = !isLogin;
-        formTitle.textContent = isLogin ? 'Log In' : 'Sign Up';
-        submitBtn.textContent = isLogin ? 'Log In' : 'Sign Up';
-        toggleText.textContent = isLogin
-          ? "Don't have an account?"
-          : 'Already have an account?';
-        toggleLink.textContent = isLogin ? 'Sign Up' : 'Log In';
-        errorMsg.style.display = 'none';
-      });
-
-      // Handle form submission
-      authForm.addEventListener('submit', e => {
-        e.preventDefault();
-        const email = document.getElementById('email').value;
-        const password = document.getElementById('password').value;
-
-        if (isLogin) {
-          // Login logic
-          const user = users.find(
-            u => u.email === email && u.password === password
-          );
-          if (user) {
-            localStorage.setItem('currentUser', JSON.stringify(user));
-            window.location.href = 'index.html'; // Redirect to home page
-          } else {
-            errorMsg.style.display = 'block';
-          }
-        } else {
-          // Sign-up logic
-          if (users.some(u => u.email === email)) {
-            errorMsg.textContent = 'Email already exists';
-            errorMsg.style.display = 'block';
-          } else {
-            const newUser = {email, password};
-            users.push(newUser);
-            localStorage.setItem('users', JSON.stringify(users));
-            localStorage.setItem('currentUser', JSON.stringify(newUser));
-            window.location.href = 'index.html'; // Redirect to home page
-          }
-        }
-      });
-
-      // Check if user is already logged in
-      if (localStorage.getItem('currentUser')) {
-        window.location.href = 'index.html';
-      }
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
