login page finished for demo

--- a/index.html
+++ b/index.html
@@ -45,8 +45,15 @@
             >Contact us</a
           >
         </li>
-        <li><a href="login-page.html" id="login">Log in</a></li>
-        <li><a href="#" id="logout" style="display: none">Log Out</a></li>
+        <li id="authSection">
+          <a href="login-page.html" id="login">Log in</a>
+        </li>
+        <li id="profileLi" style="display: none">
+          <a href="profile.html" id="profileBtn" title="Profile">
+            <i class="ri-user-fill"></i>
+          </a>
+        </li>
+        <!-- <li><a href="#" id="logout" style="display: none">Log Out</a></li> -->
         <!-- <li><a href="#" id="signup">Sign up</a></li> -->
         <li>
           <a class="show-modal" id="lang">
